# Proofcore-AI-Benchmark

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  RELEASE_NOTES_v1.0.2.md  RELEASE_NOTES_v1.0.3.md  package-lock.json  package.json  pyodide-manifest.json  pyproject.toml  setup.py
.github/workflows/: ci-cd.yml  ci-offline.yml  ci.yml  offline-guarantee.yml  performance-regression.yml  pypi-publish.yml
backend/: .env.example
backend/app/core/: config.py
backend/app/services/: llm_adapter.py  verification.py
backend/tests_rbm/: test_ca_proof.py  test_cli.py
proofcore/: __init__.py
proofcore/research_benchmark/: __init__.py  rbm_cli.py  rbm_loader.py  rbm_metrics.py  rbm_parser.py  rbm_validator.py
proofcore/research_benchmark/ca_proof/: __init__.py  assumptions.py  formal_hooks.py  numeric_hooks.py
proofcore/research_benchmark/data_examples/: sample_set.json
public/pyodide/: README.md
scripts/: fetch-pyodide-assets.mjs  verify-offline-assets.mjs
src/api/: client.ts
src/core/: hybrid_engine.ts
src/net/: safeFetch.ts
storybook/: iframe.html  index.html  index.json  project.json
storybook/assets/: Alert.stories-BSC6HtjH.js  AlertM3.stories-Iizjyo06.js  Button-BaoWun7a.js  Button.stories-BTxgLgWf.js  Button.stories-DLM3-kBT.js  ButtonM3.stories-EDblIwr0.js  CardM3.stories-BnFI1Jxc.js  Color-AVL7NMMY-Cdx-dde-.js  Configure-JkqAtdOU.js  DocsRenderer-PQXLIZUC-BCU8WajJ.js  ExecutionHistory.stories-Dx_P_mD3.js  FormField-DSX-Q71F.js  FormField.stories-Cc9sWSdA.js  Header-CM2oNzoj.js  Header.stories-BWFj0y9r.js  HybridDashboard.stories-BABGl_lC.js  ModalDrawer.stories-B7XP6AC5.js  ModalM3.stories-eM-h-2PM.js  Page.stories-B94hLsTg.js  QueryClientProvider-DLQgYWZ8.js  Settings.stories-C_a7Gp9W.js  TextFieldM3.stories-CDCGeKty.js  axe-BWvtshzp.js  blocks-JmEm0V_x.js  emotion-react-jsx-runtime.browser.esm-DUalPLDp.js  emotion-styled-base.browser.esm-eB_B6Qx9.js  iframe-DQvuGjGf.js  index-C3KLIH2X.js  index-Cn6OJE8e.js  jsx-runtime-CZm_iTvF.js  react-18-DauWOibw.js
storybook/pyodide/: README.md
tests/offline/: offline_guarantee.test.ts
